tests/pass/run/printable_dispatch_parity/main.kira
@Printable
struct Person {
    let name: String

    function onPrint() -> String {
        return name
    }
}

@Main
function main() {
    let person = Person(name: "Ada")
    print(person)
    return
}
