tests/fail/semantics/invalid_struct_annotation/main.kira
annotation Tagged { targets: struct }

@Tagged
struct Marker {}

@Main
function entry() {
    return
}
